cmake_minimum_required(VERSION 3.27)
project(2024_fall_itulahore_dsa_se200bt_assignment6_BSSE23061)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(2024_fall_itulahore_dsa_se200bt_assignment6_BSSE23061
        catch.hpp
        functions.cpp
        functions.h
        test.cpp
        main.cpp)
